--- a/dom/desafio-04/index.html
+++ b/dom/desafio-04/index.html
@@ -1,4 +1,4 @@
-<!-- <link rel="stylesheet" href="styles.css"> -->
+<link rel="stylesheet" href="styles.css">
 <script src="https://unpkg.com/vue@2"></script>
 
 <div id="desafio">
@@ -49,43 +49,9 @@
     <h2>#06</h2>
     <div>
         <button @click="iniciarProgresso">Iniciar</button>
-        <div></div>
+        <div class="barra_progresso">
+             <div class="progresso" :style="estilo4"></div>
+        </div>
     </div>
 </div>
 <script src="app.js"></script>
-
-<style>
-    #efeito {
-        width: 100px;
-        height: 100px;
-        border: 1px solid black;
-    }
-
-    .destaque {
-        background-color: red;
-        width: 200px !important;
-    }
-
-    .encolher {
-        background-color: gray;
-        width: 50px !important;
-    }
-
-    .amarelo {
-        background-color: yellow;
-    }
-
-    .redondo {
-        border-radius: 100%;
-        width: 200px;
-        height: 200px;
-        text-align: center;
-    }
-
-    .quadrado {
-        background-color: gray;
-        width: 100px;
-        height: 100px;
-    }
-
-</style>
