--- a/dom/desafio-04/index.html
+++ b/dom/desafio-04/index.html
@@ -50,7 +50,7 @@
     <div>
         <button @click="iniciarProgresso">Iniciar</button>
         <div class="barra_progresso">
-             <div class="progresso" :style="estilo4"></div>
+             <div class="progresso" :style="{width}"></div>
         </div>
     </div>
 </div>
